# mail-delivery-demo-backend

./: .flake8  .gitignore  README.md  custom.conf  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/: CODEOWNERS  release.yml
src/: __init__.py
src/aws/: sqs.py
src/config/: api.py
src/controllers/: customer.py  email_request.py
src/env/: main.py
src/handlers/: app.py
src/models/: customer.py
src/repositories/: customer.py
src/router/: customer.py  email_request.py
src/schemas/: customer.py  email_request.py  errors.py  index.py  main.py
src/services/: customer.py  email_request.py
src/utils/: generate_id.py
